Bug 393620 - Konsole doesn't respect monospace font configed with fontconf
Summary: Konsole doesn't respect monospace font configed with fontconf
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: font (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 392876 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-28 18:47 UTC by Sassan Haradji
Modified: 2018-05-09 23:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sassan Haradji 2018-04-28 18:47:59 UTC
Firstly I wanna thank you for all your efforts on this terminal emulator. I found it the only robust emulator in linux with all the features I need. I have a minor problem with persian characters in my setup:
I  set a fallback font in fontconf in monospace family alias. If I add it to sans-serif alias it works as a fallback font for persian characters in Konsole. But it doesn't work when I set it in monospace alias.
I should set it in monospace alias because it's a monospace font and I don't want it to be used by other non-monospace apps.
Let me know if I should provide any details about my configs.
Comment 1 Sassan Haradji 2018-04-30 15:01:31 UTC
It should be solved in this commit:

https://phabricator.kde.org/D12614
Comment 2 Kurt Hindenburg 2018-05-08 02:45:47 UTC
Git commit 259b98011f3d247be6068e781da6988847159fb7 by Kurt Hindenburg.
Committed on 08/05/2018 at 02:45.
Pushed by hindenburg into branch 'master'.

Fallback to fixed width fonts

Summary:
Before this commit when Konsole was trying to render a character that
didn't exist in the font selected by user, it'd fall back to default font provided
by font config without any hints that it needs monospace fonts which usually
would be a sans font.

Now Konsole hints system that it needs a monospace font.

Reviewers: hindenburg

Reviewed By: hindenburg

Subscribers: #konsole, hindenburg, mglb, ahmadsamir

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D12614

M  +5    -0    src/TerminalDisplay.cpp

https://commits.kde.org/konsole/259b98011f3d247be6068e781da6988847159fb7
Comment 3 Christoph Feck 2018-05-09 23:11:51 UTC
*** Bug 392876 has been marked as a duplicate of this bug. ***